FIX: verbose variable names.

--- a/xcode_toolchain/CMakeLists.txt
+++ b/xcode_toolchain/CMakeLists.txt
@@ -102,22 +102,22 @@ ExternalProject_Add_Step(apple_llvm add_compiler_rt_to_llvm
 ExternalProject_Add_StepDependencies(apple_llvm add_compiler_rt_to_llvm apple_compiler_rt)
 
 # A custom step to create `Info.plist` after installing LLVM to `CMAKE_INSTALL_PREFIX`.
-set(XCODE_TOOLCHAIN_BUNDLE_PLIST_BUDDY_BIN /usr/libexec/PlistBuddy)
+set(PLIST_BUDDY_COMMAND /usr/libexec/PlistBuddy)
 ExternalProject_Add_Step(apple_llvm create_bundle_info_plist
     # We need to remove existing file, otherwise `PlistBuddy` complains that the same key already exists.
     COMMAND ${CMAKE_COMMAND} -E remove ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
     # Use `PlistBuddy` to create `Info.plist`.
     # TODO: Not all fields are requried.
-    COMMAND ${XCODE_TOOLCHAIN_BUNDLE_PLIST_BUDDY_BIN} -c "Add DisplayName string '${XCODE_TOOLCHAIN_BUNDLE_DISPLAY_NAME}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
-    COMMAND ${XCODE_TOOLCHAIN_BUNDLE_PLIST_BUDDY_BIN} -c "Add ShortDisplayName string '${XCODE_TOOLCHAIN_BUNDLE_DISPLAY_NAME}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
-    COMMAND ${XCODE_TOOLCHAIN_BUNDLE_PLIST_BUDDY_BIN} -c "Add CreatedDate date '${XCODE_TOOLCHAIN_BUNDLE_CREATED_DATE}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
-    COMMAND ${XCODE_TOOLCHAIN_BUNDLE_PLIST_BUDDY_BIN} -c "Add CompatibilityVersion integer ${XCODE_TOOLCHAIN_BUNDLE_COMPATIBILITY_VERSION}" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
-    COMMAND ${XCODE_TOOLCHAIN_BUNDLE_PLIST_BUDDY_BIN} -c "Add CompatibilityVersionDisplayString string '${XCODE_TOOLCHAIN_BUNDLE_COMPATIBILITY_VERSION_DISPLAY_STRING}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
-    COMMAND ${XCODE_TOOLCHAIN_BUNDLE_PLIST_BUDDY_BIN} -c "Add Version string '${XCODE_TOOLCHAIN_BUNDLE_VERSION}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
-    COMMAND ${XCODE_TOOLCHAIN_BUNDLE_PLIST_BUDDY_BIN} -c "Add CFBundleIdentifier string '${XCODE_TOOLCHAIN_BUNDLE_IDENTIFIER}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
-    COMMAND ${XCODE_TOOLCHAIN_BUNDLE_PLIST_BUDDY_BIN} -c "Add ReportProblemURL string '${XCODE_TOOLCHAIN_BUNDLE_REPORT_PROBLEM_URL}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
-    COMMAND ${XCODE_TOOLCHAIN_BUNDLE_PLIST_BUDDY_BIN} -c "Add Aliases array" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
-    COMMAND ${XCODE_TOOLCHAIN_BUNDLE_PLIST_BUDDY_BIN} -c "Add Aliases:0 string '${XCODE_TOOLCHAIN_NAME}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
+    COMMAND ${PLIST_BUDDY_COMMAND} -c "Add DisplayName string '${XCODE_TOOLCHAIN_BUNDLE_DISPLAY_NAME}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
+    COMMAND ${PLIST_BUDDY_COMMAND} -c "Add ShortDisplayName string '${XCODE_TOOLCHAIN_BUNDLE_DISPLAY_NAME}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
+    COMMAND ${PLIST_BUDDY_COMMAND} -c "Add CreatedDate date '${XCODE_TOOLCHAIN_BUNDLE_CREATED_DATE}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
+    COMMAND ${PLIST_BUDDY_COMMAND} -c "Add CompatibilityVersion integer ${XCODE_TOOLCHAIN_BUNDLE_COMPATIBILITY_VERSION}" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
+    COMMAND ${PLIST_BUDDY_COMMAND} -c "Add CompatibilityVersionDisplayString string '${XCODE_TOOLCHAIN_BUNDLE_COMPATIBILITY_VERSION_DISPLAY_STRING}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
+    COMMAND ${PLIST_BUDDY_COMMAND} -c "Add Version string '${XCODE_TOOLCHAIN_BUNDLE_VERSION}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
+    COMMAND ${PLIST_BUDDY_COMMAND} -c "Add CFBundleIdentifier string '${XCODE_TOOLCHAIN_BUNDLE_IDENTIFIER}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
+    COMMAND ${PLIST_BUDDY_COMMAND} -c "Add ReportProblemURL string '${XCODE_TOOLCHAIN_BUNDLE_REPORT_PROBLEM_URL}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
+    COMMAND ${PLIST_BUDDY_COMMAND} -c "Add Aliases array" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
+    COMMAND ${PLIST_BUDDY_COMMAND} -c "Add Aliases:0 string '${XCODE_TOOLCHAIN_NAME}'" ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
     BYPRODUCTS ${XCODE_TOOLCHAIN_BUNDLE_INFO_PLIST_PATH}
     DEPENDEES install)
 
@@ -132,10 +132,10 @@ ExternalProject_Add_Step(apple_llvm symlink_xcode_toolchain
 ExternalProject_Add_StepTargets(apple_llvm symlink_xcode_toolchain)
 
 # A custom step to create a distribution archive of Xcode toolchain
-set(XCODE_TOOLCHAIN_BUNDLE_PLIST_DITTO_BIN /usr/bin/ditto)
+set(DITTO_COMMAND /usr/bin/ditto)
 set(XCODE_TOOLCHAIN_BUNDLE_DISTRIBUTION_ARCHIVE_PATH ${XCODE_TOOLCHAIN_BUNDLE_PATH}.zip)
 ExternalProject_Add_Step(apple_llvm create_xcode_toolchain_distribution_archive
-    COMMAND ${XCODE_TOOLCHAIN_BUNDLE_PLIST_DITTO_BIN} -c -k --keepParent ${XCODE_TOOLCHAIN_BUNDLE_PATH} ${XCODE_TOOLCHAIN_BUNDLE_DISTRIBUTION_ARCHIVE_PATH}
+    COMMAND ${DITTO_COMMAND} -c -k --keepParent ${XCODE_TOOLCHAIN_BUNDLE_PATH} ${XCODE_TOOLCHAIN_BUNDLE_DISTRIBUTION_ARCHIVE_PATH}
     BYPRODUCTS ${XCODE_TOOLCHAIN_BUNDLE_DISTRIBUTION_ARCHIVE_PATH}
     DEPENDEES create_bundle_info_plist
     # This is an optional step and exclude from default targets.
