--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,11 @@
+# Name of Xcode toolchain that is used by the example Xcode project.
+# This is not for building these example Clang tool, plugin, or analyzer checker
+# but for using these plugin or analyzer checker.
+# Default to using the Xcode default toolchain.
+set(CLANG_PLUGINS_EXAMPLES_XCODE_TOOLCHAIN ""
+    CACHE STRING "Xcode toolchain name that example Xcode project uses")
+
+
 # Example Clang tool
 add_clang_tool(example_tool
     example_tool.cpp)
@@ -12,9 +20,8 @@ add_clang_plugin(example_checker
 
 
 # Create xcconfig for Xcode Example project.
-# Use same Xcode toolchain that builds these example targets.
-if(CLANG_PLUGINS_XCODE_TOOLCHAIN)
-    set(XCCONFIG_XCODE_TOOLCHAIN "TOOLCHAINS = ${CLANG_PLUGINS_XCODE_TOOLCHAIN}")
+if(CLANG_PLUGINS_EXAMPLES_XCODE_TOOLCHAIN)
+    set(XCCONFIG_XCODE_TOOLCHAIN "TOOLCHAINS = ${CLANG_PLUGINS_EXAMPLES_XCODE_TOOLCHAIN}")
 endif()
 configure_file(Example.xcconfig.in
     # NOTE: This is intentionally create output in `CMAKE_CURRENT_SOURCE_DIR`
