Use custom variable instead of `CLANG_ANALYZER_API_VERSION_STRING`.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,6 +5,18 @@
 set(CLANG_PLUGINS_EXAMPLES_XCODE_TOOLCHAIN ""
     CACHE STRING "Xcode toolchain name that example Xcode project uses")
 
+# Clang version that is used by the example Xcode project.
+# This is used for Clang analyzer checker's `clang_analyzerAPIVersionString`.
+# In case using example Clang analyzer checker in the different Xcode, like the beta version of it,
+# set appropriate version. For example, `"10.0.0"` for Xcode 10.0.
+# Default to the Clang version that given Xcode toolchain is using.
+set(CLANG_PLUGINS_EXAMPLES_CLANG_VERSION ""
+    CACHE STRING "Clang version that example Xcode project uses")
+if(NOT CLANG_PLUGINS_EXAMPLES_CLANG_VERSION)
+    find_xcode_toolchain_clang_path(CLANG_PLUGINS_EXAMPLES_CLANG_PATH ${CLANG_PLUGINS_EXAMPLES_XCODE_TOOLCHAIN})
+    get_clang_version(CLANG_PLUGINS_EXAMPLES_CLANG_VERSION ${CLANG_PLUGINS_EXAMPLES_CLANG_PATH})
+endif()
+
 
 # Example Clang tool
 add_clang_tool(example_tool
@@ -18,6 +30,11 @@ add_clang_plugin(example_plugin
 add_clang_plugin(example_checker
     example_checker.cpp)
 
+
+# Create `configure.h`.
+configure_file(configure.h.in
+    ${CMAKE_CURRENT_SOURCE_DIR}/configure.h
+    @ONLY)
 
 # Create xcconfig for Xcode Example project.
 if(CLANG_PLUGINS_EXAMPLES_XCODE_TOOLCHAIN)
